# kubesitter

./: .gitignore  Cargo.toml  Dockerfile  README.md  Tiltfile  justfile  release.toml
charts/schedule-controller/: Chart.yaml  values.yaml
charts/uniskai-agent/: Chart.yaml  test.yaml  values.yaml
charts/uniskai-agent/crds/: kubesitter.yaml  schedule-policy.yaml
charts/uniskai-agent/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  secret.yaml
src/: controller.rs  crdgen.rs  fixtures.rs  kubesitter.rs  lib.rs  metrics.rs  schedule.rs  uniskai.rs
src/agent/: Cargo.toml
src/agent/src/: main.rs
src/controller-core/: Cargo.toml
src/controller-core/src/: lib.rs  metrics.rs  telemetry.rs
src/kubesitter/: Cargo.toml
src/kubesitter/src/: cli.rs  controller.rs  crdgen.rs  fixtures.rs  lib.rs  model.rs  uniskai.rs
src/kubesitter/src/resources_logic/: apps.rs  batch.rs  core.rs  mod.rs
src/schedule-agent/: Cargo.toml
src/schedule-agent/src/: main.rs
src/schedule-controller/: Cargo.toml
src/schedule-controller/src/: cli.rs  controller.rs  crdgen.rs  fixtures.rs  kubesitter.rs  lib.rs  model.rs  schedule.rs  uniskai.rs
src/uniskai-agent/: Cargo.toml
src/uniskai-agent/src/: main.rs
src/uniskai-sdk/: Cargo.toml
src/uniskai-sdk/src/: cli.rs  cloudsitter.rs  lib.rs
yaml/: crd.yaml  crds.yaml  deployment-aws-vpn.yaml  deployment-aws.yaml  deployment-azure-vpn.yaml  deployment-azure.yaml  deployment-vpn.yaml  deployment.yaml  example-assignments.yaml  example-illegal.yaml  example-match-labels.yaml  example-match-names.yaml  instance-lorem.yaml
yaml/vpn/: README.md  deployment.yaml  routeconfig.yaml  simple-deployment.yaml  test-deployment.yaml
