[package]
name = "schedule-controller"
version = "0.0.1"
authors = ["Oleksandr <oleksandr.an@profisealabs.com>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
name = "schedule_controller"
path = "src/lib.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[[bin]]
doc = false
name = "cli"
path = "src/cli.rs"


[dependencies]
controller-core = { path = "../controller-core" }
uniskai-sdk = { path = "../uniskai-sdk" }
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.19.0", features = ["v1_26"], default-features = false }
schemars = { version = "0.8.12", features = ["chrono"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
prometheus = "0.13.3"
chrono = { version = "0.4.26", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.20.0"
opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", features = ["tokio"]}
tonic = { version = "0.9" }
thiserror = "1.0.47"
anyhow = "1.0.75"
chrono-tz = { version = "0.8.3", features = ["serde", "case-insensitive"] }
itertools = "0.11.0"
regex = "1.9.5"
once_cell = "1.18.0"
reqwest = "0.11.20"

[dev-dependencies]
assert-json-diff = "2.0.2"
http = "0.2.9"
hyper = "0.14.27"
tower-test = "0.4.0"

[dependencies.kube]
features = ["runtime", "client", "derive", "rustls-tls"]
version = "0.85.0"
default-features = false
